@@ -3,7 +3,7 @@
 sg_verify \- invoke SCSI VERIFY command(s) on a block device
 .SH SYNOPSIS
 .B sg_verify
-[\fI\-\-16\fR] [\fI\-\-bpc=BPC\fR] [\fI\-\-bytchk=N\fR]
+[\fI\-\-16\fR] [\fI\-\-bpc=BPC\fR] [\fI\-\-bytchk=NDO\fR]
 [\fI\-\-count=COUNT\fR] [\fI\-\-dpo\fR] [\fI\-\-group=GN\fR] [\fI\-\-help\fR]
 [\fI\-\-in=IF\fR] [\fI\-\-lba=LBA\fR] [\fI\-\-readonly\fR]
 [\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fI\-\-vrprotect=VRP\fR]
@@ -15,21 +15,19 @@ Sends one or more SCSI VERIFY (10 or 16) commands to \fIDEVICE\fR. These SCSI
 commands are defined in the SBC\-2 (draft) standard at http://www.t10.org and
 SBC\-3 drafts.
 .PP
-When \fI\-\-bytchk=N\fR is not given (or \fIN\fR is 0 or less) then the
-verify starts at the logical block address given by the \fI\-\-lba=LBA\fR
-option and continues for \fI\-\-count=COUNT\fR blocks. No more than
-\fI\-\-bpc=BPC\fR blocks are verified by each VERIFY command so if necessary
-multiple VERIFY commands are sent. No news is good news (i.e. if there are
-no verify errors detected no messages are sent to stderr and the Unix return
-status is 0).
+When \fI\-\-bytchk=NDO\fR is not given then the verify starts at the logical
+block address given by the \fI\-\-lba=LBA\fR option and continues for
+\fI\-\-count=COUNT\fR blocks. No more than \fI\-\-bpc=BPC\fR blocks are
+verified by each VERIFY command so if necessary multiple VERIFY commands are
+sent. No news is good news (i.e. if there are no verify errors detected no
+messages are sent to stderr and the Unix return status is 0).
 .PP
-When \fI\-\-bytchk=N\fR is given (and \fIN\fR is greater than 0) then the
-\fI\-\-bpc=BPC\fR option is ignored. A single verify command is issued and
-it starts at the logical block address given by the \fI\-\-lba=LBA\fR
-option and continues for \fI\-\-count=COUNT\fR blocks. The verify command
-has an associated data\-out buffer that is \fIN\fR bytes long. The contents
-of the data\-out buffer are obtained from the \fIFN\fR file (if
-\fI\-\-in=FN\fR is given) or from stdin.
+When \fI\-\-bytchk=NDO\fR is given then the \fI\-\-bpc=BPC\fR option is
+ignored. A single verify command is issued and it starts at the logical block
+address given by the \fI\-\-lba=LBA\fR option and continues for
+\fI\-\-count=COUNT\fR blocks. The VERIFY command has an associated data\-out
+buffer that is \fINDO\fR bytes long. The contents of the data\-out buffer are
+obtained from the \fIFN\fR file (if \fI\-\-in=FN\fR is given) or from stdin.
 .SH OPTIONS
 Arguments to long options are mandatory for short options as well.
 The options are arranged in alphabetical order based on the long
@@ -41,24 +39,25 @@ using an \fI\-\-lba=LBA\fR which is too large, will cause the utility
 to issue a VERIFY(16) command.
 .TP
 \fB\-b\fR, \fB\-\-bpc\fR=\fIBPC\fR
-this option is ignored if \fI\-\-bytchk=N\fR (with \fIN\fR greater than 0)
-is given. Otherwise \fIBPC\fR specifies the maximum number of blocks that
-will be verified by a single SCSI VERIFY command. The default value is 128
-blocks which equates to 64 KB for a disk with 512 byte blocks. If \fIBPC\fR
-is less than \fICOUNT\fR then multiple SCSI VERIFY commands are sent to the
-device. For recent block devices (disks) this value may be constrained b
-the maximum transfer length field in the block limits VPD page.
+this option is ignored if \fI\-\-bytchk=NDO\fR is given. Otherwise \fIBPC\fR
+specifies the maximum number of blocks that will be verified by a single SCSI
+VERIFY command. The default value is 128 blocks which equates to 64 KB for a
+disk with 512 byte blocks. If \fIBPC\fR is less than \fICOUNT\fR then
+multiple SCSI VERIFY commands are sent to the device. For recent block
+devices (disks) this value may be constrained by the maximum transfer length
+field in the block limits VPD page.
 .TP
-\fB\-B\fR, \fB\-\-bytchk\fR=\fIN\fR
-sets the BYTCHK bit in the VERIFY command (if \fIN\fR is greater than 0).
-\fIN\fR is the number of bytes to obtain from the \fIFN\fR file (if
-\fI\-\-in=FN\fR is given) or from stdin. Those bytes are placed in the
-data\-out buffer associated with the SCSI VERIFY command.
+\fB\-B\fR, \fB\-\-bytchk\fR=\fINDO\fR
+sets the BYTCHK bit in the VERIFY command. \fINDO\fR is the number of bytes
+to obtain from the \fIFN\fR file (if \fI\-\-in=FN\fR is given) or from stdin.
+Those bytes are placed in the data\-out buffer associated with the SCSI
+VERIFY command. The minimum value for \fINDO\fR is 1 and the maximum value
+is dependant on the OS.
 .TP
 \fB\-c\fR, \fB\-\-count\fR=\fICOUNT\fR
 where \fICOUNT\fR specifies the number of blocks to verify. The default value
 is 1 . If \fICOUNT\fR is greater than \fIBPC\fR (or its default value of 128)
-and \fIN\fR is not given, 0 or less then multiple SCSI VERIFY commands are
+and \fINDO\fR is not given, 0 or less then multiple SCSI VERIFY commands are
 sent to the device. Otherwise \fICOUNT\fR becomes the contents of the
 verification length field of the SCSI VERIFY command issued. The
 .B sg_readcap
@@ -79,11 +78,10 @@ option is ignored for the SCSI VERIFY(10) command.
 output the usage message then exit.
 .TP
 \fB\-i\fR, \fB\-\-in\fR=\fIIF\fR
-where \fIIF\fR is the name of a file from which \fIN\fR bytes will be read
+where \fIIF\fR is the name of a file from which \fINDO\fR bytes will be read
 and placed in the data\-out buffer. This is only done when the
-\fI\-\-bytchk=N\fR option is given and \fIN\fR is greater than 0. If this
-option is not given then stdin is read. If \fIIF\fR is "\-" then stdin is
-also used.
+\fI\-\-bytchk=NDO\fR option is given. If this option is not given then stdin
+is read. If \fIIF\fR is "\-" then stdin is also used.
 .TP
 \fB\-l\fR, \fB\-\-lba\fR=\fILBA\fR
 where \fILBA\fR specifies the logical block address of the first block to
@@ -108,13 +106,12 @@ zero.
 .SH BYTCHK
 BYTCHK is the name of a bit field in the VERIFY(10) and VERIFY(16) commands.
 When set it indicates that associated with the SCSI VERIFY command a
-data/-out buffer will be sent for the device (disk) to check. Using the
-\fI\-\-bytchk=N\fR option (with \fIN\fR greater than 0) sets the
-BYTCHK field and \fIN\fR is the number of bytes placed in the data/-out
-buffer. Those bytes are obtained from stdin or \fIIF\fR (from the
-\fI\-\-in=FN\fR option).
+data\-out buffer will be sent for the device (disk) to check. Using the
+\fI\-\-bytchk=NDO\fR option sets the BYTCHK field and \fINDO\fR is the number
+of bytes placed in the data\-out buffer. Those bytes are obtained from stdin
+or \fIIF\fR (from the \fI\-\-in=FN\fR option).
 .PP
-The calculation of \fIN\fR is left up to the user. Its value depends
+The calculation of \fINDO\fR is left up to the user. Its value depends
 on the logical block size (found with the sg_readcap utility), the
 \fICOUNT\fR and the \fIVRP\fR values. If the \fIVRP\fR is greater than 0
 then each logical block will contain an extra 8 bytes (of protection
@@ -124,6 +121,10 @@ When the BYTCHK field is 0 then the verification process done by the
 device (disk) is vendor specific. It typically involves checking each
 block on the disk against its error correction codes (ECC) which is
 additional data also held on the disk.
+.PP
+Many Operating Systems put limits on the maximum size of the
+data\-out (and data\-in) buffer. For Linux at one time the limit was
+less than 1 MB but has been increased somewhat.
 .SH NOTES
 Various numeric arguments (e.g. \fILBA\fR) may include multiplicative
 suffixes or be given in hexadecimal. See the "NUMERIC ARGUMENTS" section
@@ -139,6 +140,9 @@ the DCR bit to 1, the verify retry count to 0 and the verify recovery time
 limit to 0. Mode pages can be modified with the
 .B sdparm
 utility.
+.PP
+The SCSI VERIFY(6) command defined in the SSC\-2 standard and later (i.e.
+for tape drive systems) is not supported by this utility.
 .SH EXIT STATUS
 The exit status of sg_verify is 0 when it is successful. Otherwise see
 the sg3_utils(8) man page.
